styles/layout.less
// The ui-variables file is provided by base themes provided by Atom.
@import "ui-variables";
@import "syntax-variables";

// the main component that houses everything
.agda-mode {
    @headerHeight: 50px;
    @itemHeight: 30px;

    // So that we can stop goal indices from floating around
    // see #14: https://github.com/banacorn/agda-mode/issues/14
    z-index: 4;

    // so that .agda-body will overflow and be scrollable
    height: 100%;
    > section { // pane item
        height: 100%;
    }

    //////////////////////////////////////////////////////
    // Header Container
    //////////////////////////////////////////////////////

    .agda-header-container {
        padding: 0 @component-padding;

        // <Header>
        .agda-header {
            h1 {
                height: @headerHeight;
                line-height: @headerHeight;
                font-size: 150%;
                margin: 0;
            }
        }

        // <Dashboard>
        .agda-dashboard {
            list-style: none;
            margin: 0;

            height: @headerHeight;
            line-height: @headerHeight;

            // flexbox
            display: flex;

            button {
                color: @text-color-subtle;
                min-width: 30px;
                height: 30px;
                font-size: 16px;
            }
            button:hover {
                background-color: inherit;
                color: @text-color;
            }
            button.activated {
                color: @text-color-selected;
            }

            // the spinner
            #spinner {
                opacity: 0;
            }
            // show the spinner 0.3s after the classname ".pending" is added
            #spinner.pending {
                opacity: inherit;
                transition-property: opacity;
                transition-delay: 0.3s;
            }
        }
    }

    //////////////////////////////////////////////////////
    // Body Container
    //////////////////////////////////////////////////////

    .agda-body-container {
        @height: 30px;

        // height: 100%;

        // texts
        font-family: Menlo, inconsolata, Consolas, "DejaVu Sans Mono", "Liberation Mono", Monaco, "Lucida Console", monospace;
        font-size: 125%;
        white-space: pre-wrap;       // preserves whitespaces

        // <EmacsBody>
        .agda-body {

            // so that <Body> will overflow and be scrollable
            overflow-y: scroll;
            padding: 0px @component-padding;

            li, p, section {
                min-height: @height;
                line-height: @height !important;
                padding: 0px @component-padding;
                margin: 10px 0;
            }

            li.labeled {
                background: @base-background-color;

                span.label {
                    color: @text-color-info;
                }
            }

            li.warning-error {

                background: @base-background-color;
                border-radius: @component-border-radius * 2;

                padding: @component-padding;

                span.warning-label {
                    font-variant: small-caps;
                    font-weight: bolder;
                    color: @text-color-warning;
                    float: right;
                }

                span.error-label {
                    font-variant: small-caps;
                    font-weight: bolder;
                    color: @text-color-error;
                    float: right;
                }
            }

            li.output {
                .range {
                    float: right;
                }
            }
        }
    }

    //////////////////////////////////////////////////////
    // <Settings>
    //////////////////////////////////////////////////////

    .agda-settings {

        height: 100%;
        display: flex;
        flex-flow: column;

        font-size: @font-size;
        // background: @base-background-color;

        @breadcrumbHeight: calc(@component-line-height + @component-padding * 2);

        .agda-settings-breadcrumb {
            flex: 0 1 @breadcrumbHeight;

            border-top: 1px solid @tab-border-color;
            border-bottom: 1px solid @tab-border-color;
            height: @breadcrumbHeight;
            line-height: @component-line-height;
            background: @tab-background-color;
        }


        .agda-settings-pages {
            flex: 1 1 auto;
            height: 100%;
            overflow: hidden;

            overflow-y: scroll;
        }

        .agda-settings-menu {
            li {
                height: @component-line-height * 2 + @component-padding * 2;
                line-height: @component-line-height * 2;
                padding: @component-padding @component-padding*2 @component-padding;
                font-size: 125%;

                cursor: pointer;
            }

            li:hover {
                background: @background-color-highlight;
            }

            li.selected {
                background: @background-color-selected;
            }
        }

        .agda-settings-connection {
            padding: @component-padding * 2;

            ul.agda-settings-connection-dashboard {
                background: @base-background-color;
                border: 1px solid @tool-panel-border-color;
                border-radius: @component-border-radius * 2;
                overflow: hidden;


                h2 {
                    margin: 0;
                }

                li > div {
                    padding: @component-padding @component-padding @component-padding * 4;
                }

                li {
                    border-bottom: 1px solid @tool-panel-border-color;

                }

                label {
                    user-select: none;
                    padding: @component-padding * 2;
                    font-size: @font-size * 1.5;
                    background: @tool-panel-background-color;

                    cursor: pointer;

                    display: flex;
                    justify-content: space-between;
                    align-items: center;
                }

                p {
                    margin: @component-padding;
                }

                .error {
                    box-shadow: inset 0 0 0 2px @background-color-error;
                }


            }
                .input-toggle {
                    cursor: pointer;
                    flex-shrink: 0;

                    width: 40px;
                    height: 20px;
                    border-radius: 2.5em;
                }

                .input-toggle:before {
                    width: 20px;
                    height: 20px;
                }
        }

        .agda-settings-connection.querying {
            #agda-settings-connection-agda {
                box-shadow: inset 0 0 0 2px @background-color-error;

                label {
                    background: @background-color-error;
                    color: @text-color-selected;
                }
                atom-text-editor {
                    border-color: @background-color-error;
                }
                atom-text-editor.is-focused {
                    border-color: @background-color-error;
                    box-shadow: 0 0 0 1px @background-color-error;
                }
            }

            li:not(#agda-settings-connection-agda) {
                color: lighten(@tool-panel-background-color, 10%);
                cursor: not-allowed;
                * { cursor: not-allowed; }
            }
        }

        .agda-settings-protocol {

            display: flex;
            flex-flow: column;
            height: 100%;

            .agda-settings-protocol-panel {
                background: @tool-panel-background-color;
                flex: 0 1 auto;
                padding: @component-padding * 2;
            }

            .agda-settings-protocol-log {
                // allow the height to grow (but no more than its parent)
                flex: 1 1 auto;
                overflow-y: scroll;

                li {
                    background: @base-background-color;
                    line-height: 2em;
                    padding: @component-padding * 2;
                    cursor: pointer;


                    &:hover {
                        background: @background-color-highlight;
                    }
                }
            }
        }

        .agda-settings-protocol-reqres {
            overflow-y: scroll;
            padding: @component-padding * 2;

            .agda-settings-protocol-request {
                background: @pane-item-background-color;
                padding: 0.5em;
                margin: 0.5em;
                border-radius: @component-border-radius;
                margin-bottom: 3em;
            }

            ol.agda-settings-protocol-responses {
                > li {
                    margin: 3em 0;
                    word-wrap: break-word;
                    // cursor: pointer;
                }

                dl {
                    background: @pane-item-background-color;
                }
            }

            dl {
                display: flex;
                padding: 0.5em;
                margin: 0.5em;
                border-radius: @component-border-radius;
            }

            dt {
                width: 50%;
            }

            dd {
                width: 50%;
            }

        }

    }

}

